--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "build": "gulp build",
     "start": "gulp start",
     "webp": "gulp webp",
-    "sprite": "gulp sprite"
+    "sprite": "gulp sprite",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": [
     "last 2 versions",
